// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner/> should renders correctly 1`] = `
<div>
  <div
    class="sc-AxjAm loodBG"
  >
    <svg
      class="sc-AxirZ kkGnnB"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-AxiKw gLsABH"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
</div>
`;

exports[`<Spinner/> should renders large size correctly 1`] = `
<div>
  <div
    class="sc-AxjAm evskfX"
  >
    <svg
      class="sc-AxirZ kkGnnB"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-AxiKw gLsABH"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
  <div
    class="sc-AxjAm loodBG"
  >
    <svg
      class="sc-AxirZ kkGnnB"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-AxiKw gLsABH"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
  <div
    class="sc-AxjAm yDiMv"
  >
    <svg
      class="sc-AxirZ kkGnnB"
      viewBox="25 25 50 50"
    >
      <circle
        class="sc-AxiKw gLsABH"
        cx="50"
        cy="50"
        fill="none"
        r="20"
      />
    </svg>
  </div>
</div>
`;
